vip页面不显示current标签

--- a/app/src/main/res/layout/activity_vip_benefits.xml
+++ b/app/src/main/res/layout/activity_vip_benefits.xml
@@ -105,8 +105,8 @@
             android:text="@string/username"
             android:textColor="@color/white"
             android:textSize="14sp"
-            app:layout_constraintStart_toEndOf="@+id/ivLVTips"
-            app:layout_constraintTop_toTopOf="@+id/ivLVTips" />
+            app:layout_constraintStart_toEndOf="@id/ivLVTips"
+            app:layout_constraintTop_toBottomOf="@id/tvNickName" />
 
         <LinearLayout
             android:id="@+id/llBottom"
