--- a/app/src/main/res/layout/item_home_okgame.xml
+++ b/app/src/main/res/layout/item_home_okgame.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardCover"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginRight="8dp"
-    android:background="@drawable/bg_home_game_item"
-    android:foreground="@drawable/fg_ripple">
-    <LinearLayout
-        android:layout_width="wrap_content"
+    app:cardElevation="0dp"
+    app:cardCornerRadius="@dimen/margin_8">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:orientation="vertical">
+        android:background="@drawable/bg_home_game_item"
+        android:foreground="@drawable/fg_ripple">
+
     <androidx.cardview.widget.CardView
+        android:id="@+id/cvGame"
         android:layout_width="165dp"
         android:layout_height="173dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:cardCornerRadius="8dp"
         app:cardElevation="0dp">
         <ImageView
@@ -78,10 +81,13 @@
     </androidx.cardview.widget.CardView>
         <TextView
             android:id="@+id/tvCollect"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="@dimen/margin_36"
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_collect_heart"
+            app:layout_constraintTop_toBottomOf="@id/cvGame"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             android:drawablePadding="@dimen/margin_4"
             android:paddingHorizontal="6dp"
             android:ellipsize="end"
@@ -89,7 +95,6 @@
             android:textColor="@color/color_0D2245"
             android:textSize="@dimen/textSize14sp"
             tools:text="11" />
-    </LinearLayout>
 
 <LinearLayout
     android:id="@+id/linMaintenance"
@@ -115,6 +120,6 @@
         android:textSize="@dimen/textSize16sp"
         android:textColor="@color/color_FFFFFF"
         android:text="@string/N257"/>
-
 </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
