--- a/app/src/main/res/layout/dialog_withdraw_log_detail.xml
+++ b/app/src/main/res/layout/dialog_withdraw_log_detail.xml
@@ -67,9 +67,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/margin_18"
                         android:paddingHorizontal="@dimen/margin_8"
-                        app:layout_constraintLeft_toRightOf="@id/wd_log_detail_trans_num"
-                        app:layout_constraintTop_toTopOf="@id/wd_log_detail_trans_num"
-                        app:layout_constraintBottom_toBottomOf="@id/wd_log_detail_trans_num"
+                        android:layout_marginTop="@dimen/margin_8"
+                        android:layout_marginRight="@dimen/margin_20"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/wd_log_detail_trans_num"
                         android:background="@drawable/bg_blue_radius_4_stroke"
                         android:gravity="center"
                         android:layout_marginLeft="@dimen/margin_12"
@@ -84,11 +85,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="8dp"
                         android:text="@string/log_detail_time_sub"
                         android:textColor="@color/color_FFFFFF_414655"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/wd_log_detail_trans_num_subtitle" />
+                        app:layout_constraintTop_toBottomOf="@id/tvCopy" />
 
                     <TextView
                         android:id="@+id/wd_log_detail_time"
