充值记录搜索无反应

--- a/app/src/main/res/layout/component_date_range_new_selector.xml
+++ b/app/src/main/res/layout/component_date_range_new_selector.xml
@@ -120,6 +120,7 @@
         android:layout_height="45dp"
         android:layout_marginTop="@dimen/margin_20"
         android:background="@drawable/ic_submit"
+        android:foreground="@drawable/fg_ripple"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
