--- a/app/src/main/res/layout/item_minigame.xml
+++ b/app/src/main/res/layout/item_minigame.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:background="@drawable/img_mini_game_cover"/>
+        tools:background="@drawable/img_mini_game_cover"/>
 
     <View
         android:layout_width="match_parent"
