--- a/app/src/main/res/layout/activity_money_recharge.xml
+++ b/app/src/main/res/layout/activity_money_recharge.xml
@@ -17,39 +17,12 @@
             android:id="@+id/toolBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-        <LinearLayout
-            android:id="@+id/linAnnouncement"
+
+        <org.cxct.sportlottery.ui.money.withdraw.view.AnnouncementView
+            android:id="@+id/announcement"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
-            app:layout_constraintTop_toBottomOf="@id/toolBar"
-            android:gravity="center_vertical"
-            android:paddingHorizontal="12dp"
-            android:paddingVertical="6dp"
-            android:background="@color/color_E5EFFF"
-            android:visibility="gone">
+            android:layout_height="wrap_content"/>
 
-            <ImageView
-                android:id="@+id/ivBroadcast"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:adjustViewBounds="true"
-                android:contentDescription="@null"
-                android:src="@drawable/ic_notice" />
-
-            <org.cxct.sportlottery.view.AutoScrollRecyclerView
-                android:id="@+id/rvMarquee"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/margin_4"
-                android:layout_marginRight="@dimen/margin_3"
-                android:layout_weight="1"
-                android:clipChildren="false"
-                app:speed_dp_sec="60dp"
-                tools:itemCount="1"
-                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-
-        </LinearLayout>
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
