--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -69,6 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="24dp"
         android:layout_below="@+id/bv_tool_bar"
+        android:visibility="gone"
         android:background="@color/color_chat_marquee_background"
         android:gravity="center_vertical"
         android:orientation="horizontal">
