--- a/app/src/main/res/layout/view_announcement.xml
+++ b/app/src/main/res/layout/view_announcement.xml
@@ -17,8 +17,7 @@
         android:gravity="center_vertical"
         android:paddingHorizontal="12dp"
         android:paddingVertical="6dp"
-        android:background="@color/color_E5EFFF"
-        android:visibility="gone">
+        android:background="@color/color_E5EFFF">
 
         <ImageView
             android:id="@+id/ivBroadcast"
