--- a/app/src/main/res/layout/dialog_age_verify.xml
+++ b/app/src/main/res/layout/dialog_age_verify.xml
@@ -10,6 +10,7 @@
           android:orientation="vertical"
           android:gravity="center_horizontal"
           android:layout_marginHorizontal="@dimen/margin_15"
+          android:paddingBottom="@dimen/margin_20"
           android:background="@drawable/bg_age_verify">
           <ImageView
               android:id="@+id/iv_logo"
@@ -38,37 +39,19 @@
               android:textColor="@color/color_6D7693"
               android:textSize="@dimen/textSize14sp"/>
 
-          <LinearLayout
+          <androidx.appcompat.widget.AppCompatTextView
+              android:id="@+id/cbAgree"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginHorizontal="@dimen/margin_30"
-              android:layout_marginTop="@dimen/margin_12">
-              <CheckBox
-                  android:id="@+id/cbAgree"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:button="@null"
-                  android:drawableLeft="@drawable/selector_login_checked"
-                  android:checked="false"
-                  android:drawablePadding="@dimen/margin_5"
-                  android:lineSpacingExtra="3dp"
-                  android:text="@string/dialog_age_verify_hint"
-                  android:textColor="@color/color_0D2245"
-                  android:textSize="@dimen/textSize12sp"/>
-              <TextView
-                  android:id="@+id/tvTC"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:button="@null"
-                  android:layout_marginLeft="@dimen/margin_5"
-                  android:lineSpacingExtra="3dp"
-                  android:text="@string/M311"
-                  android:textColor="@color/color_025BE8"
-                  android:textSize="@dimen/textSize12sp"/>
-          </LinearLayout>
-
-
-
+              android:layout_marginTop="@dimen/margin_12"
+              android:drawableLeft="@drawable/selector_login_checked"
+              android:textColorLink="@color/color_025BE8"
+              android:drawablePadding="@dimen/margin_5"
+              android:lineSpacingExtra="3dp"
+              android:text="@string/dialog_age_verify_hint"
+              android:textColor="@color/color_0D2245"
+              android:textSize="@dimen/textSize12sp"/>
           <TextView
               android:id="@+id/btn_confirm"
               android:layout_width="match_parent"
