--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -692,5 +692,9 @@
     <color name="color_ff871f">#ff871f</color>
     <color name="color_854C00">#854C00</color>
     <color name="color_C3DCFF">#C3DCFF</color>
+    <color name="color_3C4858">#3C4858</color>
+    <color name="color_EFF0F2">#EFF0F2</color>
+    <color name="color_DADDE3">#DADDE3</color>
+    <color name="color_F5F5F7">#F5F5F7</color>
 
 </resources>
