--- a/app/src/main/res/layout/item_home_bettingstation.xml
+++ b/app/src/main/res/layout/item_home_bettingstation.xml
@@ -1,80 +1,140 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="179dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="0dp"
-    app:cardCornerRadius="@dimen/margin_8"
-    app:cardBackgroundColor="@color/color_F7FAFE">
+    app:cardCornerRadius="@dimen/margin_12"
+    app:cardBackgroundColor="@color/color_F4F6FB">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:id="@+id/ivCover"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintDimensionRatio="179:115"
-            android:scaleType="centerCrop" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/margin_8">
-
         <TextView
             android:id="@+id/tvName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/color_313F56"
-            android:includeFontPadding="false"
-            android:textSize="@dimen/textSize14sp"
+            android:background="@color/color_EFF0F2"
+            android:gravity="center"
+            android:lineHeight="21dp"
+            android:paddingHorizontal="@dimen/margin_20"
+            android:paddingVertical="@dimen/margin_10"
+            android:textColor="@color/color_3C4858"
+            android:textSize="@dimen/textSize16sp"
             android:textStyle="bold"
-            android:lines="1"
-            android:ellipsize="end"
             tools:text="OKBet supports Miss Grand PH for the upcoming. Max  lines..." />
-
-        <TextView
-            android:id="@+id/tvAddress"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:includeFontPadding="false"
-            android:layout_marginTop="@dimen/margin_8"
-            android:lines="2"
-            android:ellipsize="end"
-            tools:text="Feb 12, 202310:16AM"
-            android:textColor="@color/color_6D7693"
-            android:textSize="@dimen/textSize12sp" />
-        <TextView
-            android:id="@+id/tvMobile"
+            android:minHeight="@dimen/margin_36"
+            android:paddingVertical="@dimen/margin_10"
+            android:gravity="center_vertical"
+            android:layout_marginHorizontal="@dimen/margin_10">
+
+            <TextView
+                android:id="@+id/tvMobileTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_home_call"
+                android:drawablePadding="@dimen/margin_6"
+                android:text="@string/mobile"
+                android:textColor="@color/color_3C4858"
+                android:textSize="@dimen/textSize12sp" />
+
+            <TextView
+                android:id="@+id/tvMobile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lines="1"
+                android:layout_marginLeft="@dimen/margin_4"
+                android:textStyle="bold"
+                android:textColor="@color/color_3C4858"
+                android:textSize="@dimen/textSize12sp"
+                tools:text="09167313767" />
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/margin_0.5"
+            android:layout_marginHorizontal="@dimen/margin_10"
+            android:background="@color/color_DADDE3"/>
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_12"
-            android:drawableLeft="@drawable/ic_home_call"
-            android:lines="1"
-            android:drawablePadding="@dimen/margin_4"
-            android:textStyle="bold"
-            android:textColor="@color/color_0F61E2"
-            android:textSize="@dimen/textSize14sp"
-            tools:text="09167313767" />
+            android:minHeight="@dimen/margin_36"
+            android:paddingVertical="@dimen/margin_10"
+            android:gravity="center_vertical"
+            android:layout_marginHorizontal="@dimen/margin_10">
+            <TextView
+                android:id="@+id/tvTimeTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_home_time"
+                android:drawablePadding="@dimen/margin_6"
+                android:textColor="@color/color_3C4858"
+                android:textSize="@dimen/textSize12sp"
+                android:text="Opening Hour: " />
+            <TextView
+                android:id="@+id/tvTime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lines="1"
+                android:layout_marginLeft="@dimen/margin_4"
+                android:textStyle="bold"
+                android:textColor="@color/color_3C4858"
+                android:textSize="@dimen/textSize12sp"
+                tools:text="Feb 12, 202310:16AM" />
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/margin_0.5"
+            android:layout_marginHorizontal="@dimen/margin_10"
+            android:background="@color/color_DADDE3"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="@dimen/margin_36"
+            android:paddingVertical="@dimen/margin_10"
+            android:gravity="center_vertical"
+            android:layout_marginHorizontal="@dimen/margin_10">
+            <TextView
+                android:id="@+id/tvLocationTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_home_address"
+                android:drawablePadding="@dimen/margin_6"
+                android:textColor="@color/color_3C4858"
+                android:textSize="@dimen/textSize12sp"
+                android:text="@string/P458" />
+            <TextView
+                android:id="@+id/tvLocation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lines="1"
+                android:lineHeight="@dimen/margin_16"
+                android:layout_marginLeft="@dimen/margin_4"
+                android:textStyle="bold"
+                android:textColor="@color/color_3C4858"
+                android:textSize="@dimen/textSize12sp"
+                tools:text="09167313767" />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/linView"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/margin_40"
+            android:layout_margin="@dimen/margin_10"
+            android:gravity="center"
+            android:background="@drawable/selector_button_default">
+          <TextView
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:drawableRight="@drawable/ic_home_viewmap"
+              android:drawablePadding="@dimen/margin_3"
+              android:textSize="@dimen/textSize12sp"
+              android:textColor="@color/color_FFFFFF"
+              android:text="View Map"/>
+        </LinearLayout>
     </LinearLayout>
 
-    </LinearLayout>
-    <ImageView
-        android:id="@+id/ivLocation"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="93dp"
-        android:layout_marginRight="@dimen/margin_6"
-        android:layout_gravity="right"
-        android:src="@drawable/ic_home_location"/>
     
 </androidx.cardview.widget.CardView>
