--- a/app/src/main/res/layout/view_home_bettingstation.xml
+++ b/app/src/main/res/layout/view_home_bettingstation.xml
@@ -7,39 +7,15 @@
     tools:orientation="vertical"
     tools:parentTag="androidx.appcompat.widget.LinearLayoutCompat">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:paddingVertical="@dimen/margin_8">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textSize="@dimen/textSize18sp"
-            android:textStyle="bold"
-            android:textColor="@color/color_313F56"
-            android:text="@string/N910" />
-        <TextView
-            android:id="@+id/tvMore"
-            android:layout_width="wrap_content"
-            android:layout_height="25dp"
-            android:drawablePadding="@dimen/margin_4"
-            android:drawableRight="@drawable/ic_home_more"
-            android:gravity="center"
-            android:text="@string/N702"
-            android:textColor="@color/color_6D7693"
-            android:textSize="14sp"
-            android:visibility="gone"/>
-    </LinearLayout>
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvBettingStation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_12"
+        android:background="@drawable/bg_white_radius_12"
+        android:padding="@dimen/margin_16"
         android:nestedScrollingEnabled="false"
-        android:clipChildren="false"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/item_home_bettingstation"
         tools:itemCount="5" />
