--- a/app/src/main/res/layout/activity_invite.xml
+++ b/app/src/main/res/layout/activity_invite.xml
@@ -52,6 +52,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Sms"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnShare"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="显示分享弹窗"/>
 
     </LinearLayout>
 
