--- a/app/src/main/res/layout/activity_bettingstation.xml
+++ b/app/src/main/res/layout/activity_bettingstation.xml
@@ -25,15 +25,17 @@
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:orientation="vertical">
+              android:orientation="vertical"
+              android:gravity="center_horizontal">
               <TextView
+                  android:id="@+id/tvTitle"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="@dimen/margin_30"
                   android:textSize="@dimen/textSize30sp"
                   android:textColor="@color/color_3C4858"
                   android:textStyle="bold"
-                  android:text="@string/P457"/>
+                  android:text="@string/N910"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
