--- a/app/src/main/res/layout/activity_invite.xml
+++ b/app/src/main/res/layout/activity_invite.xml
@@ -7,57 +7,17 @@
     android:layout_height="match_parent"
     android:background="@color/color_F0F5FA"
     android:orientation="vertical"
-    tools:context=".ui.profileCenter.nickname.ModifyProfileInfoActivity">
+    tools:context=".ui.profileCenter.invite.InviteActivity">
 
     <org.cxct.sportlottery.view.CustomTopToolbar
         android:id="@+id/tool_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        app:topTitleText="Invite Your Friends"/>
 
-    <LinearLayout
+    <org.cxct.sportlottery.view.webView.OkWebView
+        android:id="@+id/okWebView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
-        android:paddingHorizontal="@dimen/margin_15"
-        android:orientation="vertical"
-        android:background="@color/color_FFFFFF">
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnFacebook"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="facebook"/>
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnMessenger"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="messenger"/>
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnInstagram"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Instagram"/>
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnSystem"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="System"/>
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnViber"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Viber"/>
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnSms"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Sms"/>
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnShare"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="显示分享弹窗"/>
-
-    </LinearLayout>
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
