--- a/app/src/main/res/layout/activity_bettingstation.xml
+++ b/app/src/main/res/layout/activity_bettingstation.xml
@@ -37,12 +37,12 @@
                   android:textStyle="bold"
                   android:text="@string/N910"/>
               <TextView
-                  android:layout_width="wrap_content"
+                  android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:layout_marginHorizontal="100dp"
+                  android:layout_marginHorizontal="60dp"
                   android:gravity="center"
                   android:lineHeight="@dimen/margin_16"
-                  android:layout_marginTop="@dimen/margin_12"
+                  android:layout_marginTop="@dimen/margin_6"
                   android:textSize="@dimen/textSize12sp"
                   android:textColor="@color/color_3C4858"
                   android:text="Grander Gaming, More Service Offering, and Expanded Location!"/>
