邀请好友相关页面开发

--- a/app/src/main/res/layout/fragment_main_left.xml
+++ b/app/src/main/res/layout/fragment_main_left.xml
@@ -126,6 +126,12 @@
                 android:paddingHorizontal="12dp"/>
 
             <org.cxct.sportlottery.view.MainMenuItemView
+                android:id="@+id/menuInvite"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="12dp"/>
+
+            <org.cxct.sportlottery.view.MainMenuItemView
                 android:id="@+id/menuAffiliate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
