清理资源文件

--- a/app/src/main/res/layout/content_infocenter_list.xml
+++ b/app/src/main/res/layout/content_infocenter_list.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/color_191919_FCFCFC"
-    android:orientation="vertical"
-    tools:context=".ui2.infoCenter.InfoCenterAdapter">
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/ll_title"
