--- a/app/src/main/res/layout/crypto_pay_fragment.xml
+++ b/app/src/main/res/layout/crypto_pay_fragment.xml
@@ -225,8 +225,7 @@
                         android:adjustViewBounds="true"
                         android:maxWidth="110dp"
                         android:maxHeight="110dp"
-                        android:scaleType="fitCenter"
-                        tools:src="@drawable/ic_close_gray_blue" />
+                        android:scaleType="fitCenter"/>
                 </LinearLayout>
 
 
