--- a/app/src/main/res/layout/transfer_pay_fragment.xml
+++ b/app/src/main/res/layout/transfer_pay_fragment.xml
@@ -242,8 +242,7 @@
                                 android:adjustViewBounds="true"
                                 android:maxWidth="110dp"
                                 android:maxHeight="110dp"
-                                android:scaleType="fitCenter"
-                                tools:src="@drawable/ic_close_gray_blue" />
+                                android:scaleType="fitCenter" />
 
                             <TextView
                                 android:layout_width="match_parent"
