DragonPay支付渠道需要填写邮箱

--- a/app/src/main/res/layout/online_pay_fragment.xml
+++ b/app/src/main/res/layout/online_pay_fragment.xml
@@ -29,6 +29,18 @@
             app:cvInputType="text"
             app:cvTitle="@string/title_payer" />
 
+        <!-- 邮箱 -->
+        <org.cxct.sportlottery.view.LoginEditText
+            android:id="@+id/et_recharge_online_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cvTitleTextStyle="normal"
+            app:cvEms="50"
+            app:cvTextColor="@color/color_9BB3D9_535D76"
+            app:cvHint="@string/J558"
+            app:cvInputType="text"
+            app:cvTitle="@string/e_mail" />
+
 
         <!-- 充值金額 -->
         <org.cxct.sportlottery.view.LoginEditText
