facebook授权相关调整

--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -12,24 +12,81 @@
     <org.cxct.sportlottery.view.CustomTopToolbar
         android:id="@+id/tool_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        app:topTitleText="@string/auth_login"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical"
-        android:background="@color/color_FFFFFF">
+        android:layout_marginTop="15dp"
+        android:paddingHorizontal="@dimen/margin_12"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:gravity="center_vertical"
+            android:paddingHorizontal="12dp"
+            android:background="@drawable/bg_white_radius_12"
+            android:visibility="visible">
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_facebook"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="12dp"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_0D2245"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:text="@string/facebook" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_BEC7DC"
+                    android:textSize="12sp"
+                    android:lines="1"
+                    android:ellipsize="end"
+                    android:text="@string/hint_link_facebook" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_check_facebook"
+                android:layout_width="wrap_content"
+                android:layout_height="36dp"
+                android:minWidth="80dp"
+                android:gravity="center"
+                android:paddingHorizontal="@dimen/margin_10"
+                android:textColor="@color/color_535D76"
+                android:textSize="14sp"
+                android:background="@drawable/bg_stroke_radius_8_gray"
+                android:text="@string/link" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="68dp"
+            android:layout_height="60dp"
             android:gravity="center_vertical"
-            android:paddingHorizontal="14dp">
+            android:background="@drawable/bg_white_radius_12"
+            android:layout_marginTop="10dp"
+            android:paddingHorizontal="12dp">
 
             <ImageView
-                android:layout_width="44dp"
-                android:layout_height="44dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:src="@drawable/ic_google"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -39,23 +96,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:layout_marginLeft="14dp"
+                android:layout_marginLeft="12dp"
                 android:gravity="center_vertical"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/color_535D76"
-                    android:textSize="14sp"
+                    android:textColor="@color/color_0D2245"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
                     android:text="@string/google" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:textColor="@color/color_C9CFD7"
-                    android:textSize="14sp"
+                    android:textColor="@color/color_BEC7DC"
+                    android:textSize="12sp"
                     android:lines="1"
                     android:ellipsize="end"
                     android:text="@string/hint_link_google" />
@@ -64,79 +121,14 @@
             <TextView
                 android:id="@+id/tv_check_google"
                 android:layout_width="wrap_content"
-                android:layout_height="44dp"
-                android:paddingHorizontal="@dimen/margin_15"
-                android:drawablePadding="12dp"
+                android:layout_height="36dp"
+                android:paddingHorizontal="@dimen/margin_10"
                 android:minWidth="80dp"
                 android:gravity="center"
                 android:textColor="@color/color_FFFFFF"
                 android:textSize="14sp"
                 android:background="@drawable/button_radius_8_bet_button"
-                android:drawableLeft="@drawable/ic_checked_white"
                 android:text="@string/linked" />
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:layout_marginHorizontal="14dp"
-            android:alpha="0.5"
-            android:background="@color/color_E3E8EE"
-            android:visibility="gone" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="68dp"
-            android:gravity="center_vertical"
-            android:paddingHorizontal="14dp"
-            android:visibility="gone">
-
-            <ImageView
-                android:layout_width="44dp"
-                android:layout_height="44dp"
-                android:src="@drawable/ic_facebook"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_marginLeft="14dp"
-                android:gravity="center_vertical"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/color_535D76"
-                    android:textSize="14sp"
-                    android:text="@string/facebook" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:textColor="@color/color_C9CFD7"
-                    android:textSize="14sp"
-                    android:lines="1"
-                    android:ellipsize="end"
-                    android:text="@string/hint_link_facebook" />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/tv_check_facebook"
-                android:layout_width="wrap_content"
-                android:layout_height="44dp"
-                android:minWidth="80dp"
-                android:gravity="center"
-                android:paddingHorizontal="@dimen/margin_15"
-                android:drawablePadding="12dp"
-                android:textColor="@color/color_535D76"
-                android:textSize="14sp"
-                android:background="@drawable/bg_stroke_radius_8_gray"
-                android:text="@string/link" />
         </LinearLayout>
 
     </LinearLayout>
@@ -147,7 +139,8 @@
         android:layout_gravity="right"
         android:layout_marginRight="14dp"
         android:gravity="center_horizontal"
-        android:layout_marginTop="30dp">
+        android:layout_marginTop="30dp"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
