--- a/app/src/main/res/layout/activity_login_ok.xml
+++ b/app/src/main/res/layout/activity_login_ok.xml
@@ -339,54 +339,20 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginVertical="@dimen/margin_16"
                     android:gravity="center"
                     android:orientation="horizontal">
-
-                    <LinearLayout
-                        android:id="@+id/btn_google"
-                        android:layout_width="wrap_content"
-                        android:layout_height="@dimen/margin_45"
-                        android:layout_gravity="center"
-                        android:gravity="center">
-
-                        <ImageView
-                            android:layout_width="22dp"
-                            android:layout_height="22dp"
-                            android:src="@drawable/ic_google" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/margin_10"
-                            android:textSize="@dimen/sp_14"
-                            android:textStyle="bold"
-                            android:textColor="@color/color_0D2245"
-                            android:text="@string/google" />
-                    </LinearLayout>
-
-                    <LinearLayout
+                    <ImageView
                         android:id="@+id/btn_facebook"
-                        android:layout_width="wrap_content"
-                        android:layout_height="@dimen/margin_45"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="@dimen/margin_20"
-                        android:gravity="center">
-
-                        <ImageView
-                            android:layout_width="22dp"
-                            android:layout_height="22dp"
-                            android:src="@drawable/ic_facebook" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/margin_10"
-                            android:textSize="@dimen/sp_14"
-                            android:textStyle="bold"
-                            android:textColor="@color/color_0D2245"
-                            android:text="@string/facebook" />
-                    </LinearLayout>
-
+                        android:layout_width="@dimen/margin_40"
+                        android:layout_height="@dimen/margin_40"
+                        android:layout_marginRight="56dp"
+                        android:src="@drawable/ic_facebook" />
+                    <ImageView
+                        android:id="@+id/btn_google"
+                        android:layout_width="@dimen/margin_40"
+                        android:layout_height="@dimen/margin_40"
+                        android:src="@drawable/ic_google" />
                 </LinearLayout>
             </LinearLayout>
             <include layout="@layout/layout_login_privacy"
