--- a/app/src/main/res/layout/activity_forget_ways.xml
+++ b/app/src/main/res/layout/activity_forget_ways.xml
@@ -54,7 +54,7 @@
 
 
     <include
-        android:id="@+id/include_subtitle"
+        android:id="@+id/includeSubtitle"
         layout="@layout/include_login_subtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -70,7 +70,7 @@
         android:elevation="1dp"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include_subtitle">
+        app:layout_constraintTop_toBottomOf="@+id/includeSubtitle">
 
         <Button
             android:id="@+id/btnPhoneWays"
