--- a/app/src/main/res/layout/activity_login_ok.xml
+++ b/app/src/main/res/layout/activity_login_ok.xml
@@ -34,7 +34,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
    <include
-       android:id="@+id/include_subtitle"
+       android:id="@+id/includeSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/include_login_subtitle"
@@ -48,7 +48,7 @@
         android:overScrollMode="never"
         android:scrollbars="none"
         android:fadingEdge="none"
-        app:layout_constraintTop_toBottomOf="@id/include_subtitle"
+        app:layout_constraintTop_toBottomOf="@id/includeSubtitle"
         app:layout_constraintBottom_toTopOf="@id/bottom_liences">
 
         <androidx.constraintlayout.widget.ConstraintLayout
