--- a/app/src/main/res/layout/fragment_money_transfer.xml
+++ b/app/src/main/res/layout/fragment_money_transfer.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <include
-        android:id="@+id/layout_balance"
+        android:id="@+id/layoutBalance"
         layout="@layout/view_account_balance_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,7 +28,7 @@
         android:id="@+id/space"
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        app:layout_constraintTop_toBottomOf="@id/layout_balance" />
+        app:layout_constraintTop_toBottomOf="@id/layoutBalance" />
 
     <com.scwang.smart.refresh.layout.SmartRefreshLayout
         android:id="@+id/view_refresh"
