--- a/app/src/main/res/layout/view_total_record.xml
+++ b/app/src/main/res/layout/view_total_record.xml
@@ -28,7 +28,7 @@
         app:layout_constraintTop_toBottomOf="@+id/view2" />
 
     <TextView
-        android:id="@+id/tv_total_number"
+        android:id="@+id/tvTotalNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/color_AEAEAE_404040"
