--- a/app/src/main/res/layout/content_money_pay_type_rv.xml
+++ b/app/src/main/res/layout/content_money_pay_type_rv.xml
@@ -17,15 +17,14 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_type"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ic_bank"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/margin_5"
-        android:ellipsize="end"
-        android:gravity="center_vertical"
+        android:gravity="center_vertical|center_horizontal"
         android:textColor="@color/selector_blue_black"
-        android:singleLine="true"
+        android:maxLines="2"
         android:textSize="@dimen/textSize10sp"
         tools:text="银行卡转账" />
 
