--- a/app/src/main/res/layout/dialog_register_success.xml
+++ b/app/src/main/res/layout/dialog_register_success.xml
@@ -37,9 +37,11 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_marginTop="@dimen/margin_20"
+            android:layout_marginHorizontal="@dimen/margin_20"
             android:textColor="@color/color_FFFFFF_414655"
             android:textSize="@dimen/textSize18sp"
             android:textStyle="bold"
+            android:lineSpacingExtra="3dp"
             android:text="@string/P236"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
